Path S and Default same logic as Path M